// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorkOrderUpdateSummary component should render properly over vary spend limit 1`] = `
<DocumentFragment>
  <div>
    <h1
      class="lbh-heading-h1"
    >
      Update work order: 10000012
    </h1>
    <form
      id="repair-request-form"
      role="form"
    >
      <h4
        class="lbh-heading-h4"
      >
        Summary of updates to work order
      </h4>
      <h4
        class="lbh-heading-h4"
      >
        Original Tasks and SORs
      </h4>
      <table
        class="govuk-table lbh-table original-tasks-table"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header govuk-!-width-one-half"
              scope="col"
            >
              SOR code
            </th>
            <th
              class="govuk-table__header govuk-!-width-one-quarter"
              scope="col"
            >
              Quantity
            </th>
            <th
              class="govuk-table__header govuk-!-width-one-quarter"
              scope="col"
            >
              Cost (unit)
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row"
            id="original-task-0"
          >
            <th
              class="govuk-table__header"
              scope="row"
            >
              DES5R006
            </th>
            <td
              class="govuk-table__cell"
            >
              2
            </td>
            <td
              class="govuk-table__cell"
            >
              £10.5
            </td>
            <td
              class="govuk-table__cell aligned-row"
            />
          </tr>
        </tbody>
      </table>
      <h4
        class="lbh-heading-h4"
      >
        Updated Tasks and SORs
      </h4>
      <table
        class="govuk-table lbh-table updated-tasks-table"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header govuk-!-width-one-half"
              scope="col"
            >
              SOR code
            </th>
            <th
              class="govuk-table__header govuk-!-width-one-quarter"
              scope="col"
            >
              Quantity
            </th>
            <th
              class="govuk-table__header govuk-!-width-one-quarter"
              scope="col"
            >
              Cost (unit)
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row"
            id="existing-task-0"
          >
            <th
              class="govuk-table__header"
              scope="row"
            >
              DES5R006
            </th>
            <td
              class="govuk-table__cell"
            >
              3
            </td>
            <td
              class="govuk-table__cell"
            >
              £10.5
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="lbh-link"
                href="#"
              >
                Edit
              </a>
            </td>
          </tr>
          <tr
            class="govuk-table__row"
            id="existing-task-1"
          >
            <th
              class="govuk-table__header"
              scope="row"
            >
              DES5R005
            </th>
            <td
              class="govuk-table__cell"
            >
              1
            </td>
            <td
              class="govuk-table__cell"
            >
              £14.5
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="lbh-link"
                href="#"
              >
                Edit
              </a>
            </td>
          </tr>
          <tr
            class="govuk-table__row"
            id="added-task-0"
          >
            <th
              class="govuk-table__header"
              scope="row"
            >
              DES5R004
            </th>
            <td
              class="govuk-table__cell"
            >
              2
            </td>
            <td
              class="govuk-table__cell"
            >
              £22.5
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="lbh-link"
                href="#"
              >
                Edit
              </a>
            </td>
          </tr>
          <tr
            class="govuk-table__row"
            id="original-cost"
          >
            <th
              class="govuk-table__header border-none"
              scope="row"
            />
            <td
              class="govuk-!-padding-top-3"
            >
              <strong>
                Original cost
              </strong>
            </td>
            <td
              class="govuk-!-padding-top-3"
            >
              £21.00
            </td>
            <td />
          </tr>
          <tr
            class="govuk-table__row"
            id="variation-cost"
          >
            <th
              scope="row"
            />
            <td
              class="govuk-!-padding-top-3"
            >
              <strong>
                Variation cost
              </strong>
            </td>
            <td
              class="govuk-!-padding-top-3"
            >
              £70.00
            </td>
            <td />
          </tr>
          <tr
            class="govuk-table__row"
            id="total-cost"
          >
            <th
              scope="row"
            />
            <td
              class="govuk-!-padding-top-3 border-top-black"
            >
              <strong>
                Total cost
              </strong>
            </td>
            <td
              class="govuk-!-padding-top-3 border-top-black"
            >
              £91.00
            </td>
            <td />
          </tr>
        </tbody>
      </table>
      <div
        class="variation-reason-summary lbh-body-s govuk-!-margin-bottom-7"
      >
        <h4
          class="lbh-heading-h4"
        >
          Variation reason
        </h4>
        <p>
          More work is necessary
        </p>
      </div>
      <div
        class="govuk-warning-text lbh-warning-text"
      >
        <span
          aria-hidden="true"
          class="govuk-warning-text__icon"
        >
          !
        </span>
        <strong
          class="govuk-warning-text__text"
        >
          <span
            class="govuk-warning-text__assistive"
          >
            Warning
          </span>
          Your variation cost exceeds £20 and will be sent for approval.
        </strong>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <button
          class="govuk-button lbh-button"
          data-module="govuk-button"
          id="submit-work-order-close"
          type="submit"
        >
          Confirm and close
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`WorkOrderUpdateSummary component should render properly within vary spend limit 1`] = `
<DocumentFragment>
  <div>
    <h1
      class="lbh-heading-h1"
    >
      Update work order: 10000012
    </h1>
    <form
      id="repair-request-form"
      role="form"
    >
      <h4
        class="lbh-heading-h4"
      >
        Summary of updates to work order
      </h4>
      <h4
        class="lbh-heading-h4"
      >
        Original Tasks and SORs
      </h4>
      <table
        class="govuk-table lbh-table original-tasks-table"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header govuk-!-width-one-half"
              scope="col"
            >
              SOR code
            </th>
            <th
              class="govuk-table__header govuk-!-width-one-quarter"
              scope="col"
            >
              Quantity
            </th>
            <th
              class="govuk-table__header govuk-!-width-one-quarter"
              scope="col"
            >
              Cost (unit)
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row"
            id="original-task-0"
          >
            <th
              class="govuk-table__header"
              scope="row"
            >
              DES5R006
            </th>
            <td
              class="govuk-table__cell"
            >
              2
            </td>
            <td
              class="govuk-table__cell"
            >
              £10.5
            </td>
            <td
              class="govuk-table__cell aligned-row"
            />
          </tr>
        </tbody>
      </table>
      <h4
        class="lbh-heading-h4"
      >
        Updated Tasks and SORs
      </h4>
      <table
        class="govuk-table lbh-table updated-tasks-table"
      >
        <thead
          class="govuk-table__head"
        >
          <tr
            class="govuk-table__row lbh-body"
          >
            <th
              class="govuk-table__header govuk-!-width-one-half"
              scope="col"
            >
              SOR code
            </th>
            <th
              class="govuk-table__header govuk-!-width-one-quarter"
              scope="col"
            >
              Quantity
            </th>
            <th
              class="govuk-table__header govuk-!-width-one-quarter"
              scope="col"
            >
              Cost (unit)
            </th>
            <th
              class="govuk-table__header"
              scope="col"
            />
          </tr>
        </thead>
        <tbody
          class="govuk-table__body"
        >
          <tr
            class="govuk-table__row"
            id="existing-task-0"
          >
            <th
              class="govuk-table__header"
              scope="row"
            >
              DES5R006
            </th>
            <td
              class="govuk-table__cell"
            >
              3
            </td>
            <td
              class="govuk-table__cell"
            >
              £10.5
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="lbh-link"
                href="#"
              >
                Edit
              </a>
            </td>
          </tr>
          <tr
            class="govuk-table__row"
            id="existing-task-1"
          >
            <th
              class="govuk-table__header"
              scope="row"
            >
              DES5R005
            </th>
            <td
              class="govuk-table__cell"
            >
              1
            </td>
            <td
              class="govuk-table__cell"
            >
              £14.5
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="lbh-link"
                href="#"
              >
                Edit
              </a>
            </td>
          </tr>
          <tr
            class="govuk-table__row"
            id="added-task-0"
          >
            <th
              class="govuk-table__header"
              scope="row"
            >
              DES5R004
            </th>
            <td
              class="govuk-table__cell"
            >
              2
            </td>
            <td
              class="govuk-table__cell"
            >
              £22.5
            </td>
            <td
              class="govuk-table__cell"
            >
              <a
                class="lbh-link"
                href="#"
              >
                Edit
              </a>
            </td>
          </tr>
          <tr
            class="govuk-table__row"
            id="original-cost"
          >
            <th
              class="govuk-table__header border-none"
              scope="row"
            />
            <td
              class="govuk-!-padding-top-3"
            >
              <strong>
                Original cost
              </strong>
            </td>
            <td
              class="govuk-!-padding-top-3"
            >
              £21.00
            </td>
            <td />
          </tr>
          <tr
            class="govuk-table__row"
            id="variation-cost"
          >
            <th
              scope="row"
            />
            <td
              class="govuk-!-padding-top-3"
            >
              <strong>
                Variation cost
              </strong>
            </td>
            <td
              class="govuk-!-padding-top-3"
            >
              £70.00
            </td>
            <td />
          </tr>
          <tr
            class="govuk-table__row"
            id="total-cost"
          >
            <th
              scope="row"
            />
            <td
              class="govuk-!-padding-top-3 border-top-black"
            >
              <strong>
                Total cost
              </strong>
            </td>
            <td
              class="govuk-!-padding-top-3 border-top-black"
            >
              £91.00
            </td>
            <td />
          </tr>
        </tbody>
      </table>
      <div
        class="variation-reason-summary lbh-body-s govuk-!-margin-bottom-7"
      >
        <h4
          class="lbh-heading-h4"
        >
          Variation reason
        </h4>
        <p>
          More work is necessary
        </p>
      </div>
      <div
        class="govuk-form-group lbh-form-group"
      >
        <button
          class="govuk-button lbh-button"
          data-module="govuk-button"
          id="submit-work-order-close"
          type="submit"
        >
          Confirm and close
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
